// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should successfully create a initial extent component with additional css classes 1`] = `
<button
  aria-label="initial-extent.title"
  class="chakra-button chakra-tooltip__trigger tool-button initial-extent testClass1 testClass2 css-1qurmz4"
  data-part="trigger"
  data-scope="tooltip"
  data-state="closed"
  data-testid="initial-extent"
  dir="ltr"
  id="tooltip:«r1»:trigger"
  type="button"
>
  <svg
    aria-hidden="true"
    class="chakra-icon css-1qiwd9j"
    fill="none"
    focusable="false"
    height="1em"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
    />
    <path
      d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
    />
  </svg>
</button>
`;

exports[`should successfully create a initial extent component with home button 1`] = `
<button
  aria-label="initial-extent.title"
  class="chakra-button chakra-tooltip__trigger tool-button initial-extent css-1qurmz4"
  data-part="trigger"
  data-scope="tooltip"
  data-state="closed"
  data-testid="initial-extent"
  dir="ltr"
  id="tooltip:«r0»:trigger"
  type="button"
>
  <svg
    aria-hidden="true"
    class="chakra-icon css-1qiwd9j"
    fill="none"
    focusable="false"
    height="1em"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
    />
    <path
      d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
    />
  </svg>
</button>
`;
